I added index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello Worlds</h1>
+    <h3>🏺</h3>
+     <h1>Code Rules! </h1>
 </body>
 </html>
