--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Worlds</h1>
-    <h3>🏺</h3>
-     <h1>Code Rules! </h1>
+    <h1>Hello World</h1>
+    <h2>🏺</h2>
+    <h1>Changes</h1>
+     
+
+
+
+
 </body>
 </html>
